# cloudguard-server

./: .editorconfig  .envrc  .guix-channel  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  EXPLAINME.adoc  GOVERNANCE.md  Justfile  MAINTAINERS.md  PLACEHOLDERS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  RSR_OUTLINE.adoc  SECURITY.md  cliff.toml  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.reuse/: dep5
.well-known/: security.txt
container/: .gatekeeper.yaml  0-AI-MANIFEST.a2ml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
contractiles/dust/: Dustfile.a2ml
contractiles/intend/: Intentfile.a2ml
contractiles/lust/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: AI-INSTALL-README-SECTION.adoc  AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc  QUICKSTART.md  THREAT-MODEL.md
src/: auth.rs  main.rs
(+7 files in other folders)
