# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "cloudguard-server"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "CloudGuard Server — REST + WebSocket API for Cloudflare domain security management"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/cloudguard-server"
readme = "README.adoc"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
once_cell = "1"

[[bin]]
name = "cloudguard-server"
path = "src/main.rs"
